<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sign_up_3" android:background="@drawable/skin_sign_up_3">

    <androidx.cardview.widget.CardView
            android:layout_width="298dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.504" app:cardCornerRadius="20dp" app:cardElevation="20dp"
            android:id="@+id/cardView3" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="32dp">
        <EditText
                android:layout_width="287dp"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_cedulaUsuario" tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck"
                android:hint="@string/hint_txt_cedula" android:background="@null" android:layout_marginStart="8dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="298dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            app:layout_constraintBottom_toTopOf="@+id/btn_signUp3"
            app:cardCornerRadius="20dp" app:cardElevation="20dp" app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintVertical_bias="0.435">
        <EditText
                android:layout_width="287dp"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_txt_direccion"
                android:layout_marginStart="8dp" android:background="@null" tools:ignore="TouchTargetSizeCheck"
                android:id="@+id/txt_direccionUsuario"/>
    </androidx.cardview.widget.CardView>
    <Button
            android:text="@string/titulo_btn_sign_up_siguiente"
            android:layout_width="230dp"
            android:layout_height="70dp" android:id="@+id/btn_signUp3"
            android:textSize="24sp" android:fontFamily="sans-serif-medium"
            app:cornerRadius="50dp" android:backgroundTint="@color/sign_up_color"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:textColor="#455A64"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck"
            android:layout_marginBottom="44dp" android:elevation="50dp"/>
    <ImageView
            android:layout_width="111dp"
            android:layout_height="105dp" app:srcCompat="@drawable/icon_personal_data" android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="276dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>