<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio_Sesion">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/textUsuario"
            android:layout_width="287dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/txt_usuario"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_signUp3"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/sign_up_color"
        android:elevation="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/titulo_btn_sign_up_siguiente"
        android:textColor="#455A64"
        android:textSize="24sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="111dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/icon_contact_users" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="298dp"
        android:layout_height="45dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="423dp">

        <EditText
            android:id="@+id/txt_clave"
            android:layout_width="287dp"
            android:layout_height="51dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/txt_clave"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>